[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitrea-client"
version = "1.0.0"
description = "Python client library for Vitrea Smart Home API (ported from TypeScript)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Python Port", email = "python@example.com"},
]
keywords = [
    "api-client",
    "smarthome",
    "smart-home",
    "socket-client",
    "vitrea",
    "vbox",
    "home-automation",
    "tcp-client",
    "async"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/bdsoha/vitrea-client"
Repository = "https://github.com/bdsoha/vitrea-client"
Issues = "https://github.com/bdsoha/vitrea-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vitrea_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=vitrea_client",
    "--cov-report=term-missing",
] 

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
